Fix error message layout on mobile.

--- a/frontend/src/scss/page-simulation/_form-input.scss
+++ b/frontend/src/scss/page-simulation/_form-input.scss
@@ -3,6 +3,7 @@
     color: #FE5050 !important;
     font-weight: 400 !important;
     margin-top: 1em !important;
+    max-width: rem(150);
   }
   
   .error {
